WIP: playing with transition delays

--- a/packages/new-header/src/scss/_component.scss
+++ b/packages/new-header/src/scss/_component.scss
@@ -500,6 +500,7 @@
     visibility: hidden;
     box-shadow: 0 0.75rem core.$space-m rgb(24 24 24 / 20%);
     
+    //transition-delay: 2s;
   }
 
   &__megamenu {
