updated to consisstent padding on megamenu heading to align with other links

--- a/packages/new-header/src/scss/_component.scss
+++ b/packages/new-header/src/scss/_component.scss
@@ -525,7 +525,7 @@
   .megamenu__heading {
     color: core.$uq-purple;
     font-weight: 500;
-    padding: core.$space-s core.$space-none;
+    padding: core.$space-xs core.$space-none;
   }
 
   .megamenu__menu {
