--- a/packages/new-header/src/scss/_component.scss
+++ b/packages/new-header/src/scss/_component.scss
@@ -513,7 +513,8 @@
 
   .megamenu__row {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: 22rem max-content;
+    column-gap: 6.5rem;
   }
 
   .megamenu__overview-link {
