--- a/packages/new-header/src/scss/_component.scss
+++ b/packages/new-header/src/scss/_component.scss
@@ -137,7 +137,6 @@
     }
 
     &--is-open {
-      background-color: #48206c;
 
       &::before {
         background-image: url(icon-constants.get-icon("standard--close", core.$uq-white));
@@ -146,21 +145,7 @@
 
   }
 
-  .main-nav__search-toggle--is-open {
-    & .uq-icon--standard--search {
-      display: none;
-    }
-    & .uq-icon--standard--close {
-      display: flex;
 
-      &::before {
-        @media #{core.$screen-lg-up} {
-          background-size: 80%;
-        }
-
-      }
-    }
-  }
 
 
   &__logo {
@@ -411,6 +396,8 @@
 
   &__search-query-input {
     margin: 0 !important;
+    padding: core.$space core.$space-m !important;
+
   }
 
   &__search-query-button {
@@ -444,7 +431,7 @@
       top: core.$space-s;
       left: core.$space-s;
       background-size: 100%;
-      background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%2351247A'%3e%3cg fill='none' stroke='%2351247A' stroke-width='.75'%3e%3cpath d='M6.57 11.145a4.573 4.573 0 1 0 .003-9.146 4.573 4.573 0 0 0-.003 9.146zm0 0'%3e%3c/path%3e%3cpath d='m9.715 10 4.57 4.285' stroke-linecap='round' stroke-linejoin='round'%3e%3c/path%3e%3c/g%3e%3c/svg%3e");
+      background-image: url(icon-constants.get-icon("standard--search", core.$uq-purple));
     }
   }
 
