search input icon spacing tweak

--- a/packages/new-header/src/scss/_component.scss
+++ b/packages/new-header/src/scss/_component.scss
@@ -415,7 +415,7 @@
     margin-right: 0;
     overflow: hidden;
     position: absolute;
-    right: 0;
+    right: core.$space-s;
     text-decoration: none;
     text-indent: 0;
     top: calc(50% - 1.375rem);
